--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -41,6 +41,15 @@ jobs:
             --create-namespace \
             --set crds.enabled=true
           
+      - name: Store values in secret file
+        run: |
+          kubectl create secret generic aso-credential \
+            --namespace aso-system \
+            --from-literal=AZURE_CLIENT_ID=${{secrets.AZURE_CLIENT_ID}} \
+            --from-literal=AZURE_CLIENT_SECRET=${{secrets.AZURE_CLIENT_SECRET}} \
+            --from-literal=AZURE_TENANT_ID=${{secrets.AZURE_TENANT_ID}} \
+            --from-literal=AZURE_SUBSCRIPTION_ID=${{secrets.AZURE_SUBSCRIPTION_ID}}
+          
       - name: Install ASO using Helm
         run: |
           helm repo add aso2 https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
@@ -61,19 +70,19 @@ jobs:
           
       - name: Login to Container Registry
         run: |
-          az acr login --name testk8registry
+          az acr login --name asdccontainer
 
       - name: Build K8Test image
         working-directory: K8Test
         run: |
-          docker build -t testk8registry.azurecr.io/k8test-api .
-          docker push testk8registry.azurecr.io/k8test-api
+          docker build -t asdccontainer.azurecr.io/k8test-api .
+          docker push asdccontainer.azurecr.io/k8test-api
           
       - name: Build K8OtherApi image
         working-directory: K8OtherAPI
         run: |
-          docker build -t testk8registry.azurecr.io/k8other-api .
-          docker push testk8registry.azurecr.io/k8other-api
+          docker build -t asdccontainer.azurecr.io/k8other-api .
+          docker push asdccontainer.azurecr.io/k8other-api
           
       - name: Deploy API manifests
         run: |
