--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -43,9 +43,9 @@ jobs:
           
       - name: Store values in secret file
         run: |
+          kubectl create namespace aso-system
           kubectl create secret generic aso-credential \
             --namespace aso-system \
-            --create-namespace
             --from-literal=AZURE_CLIENT_ID=${{secrets.AZURE_CLIENT_ID}} \
             --from-literal=AZURE_CLIENT_SECRET=${{secrets.AZURE_CLIENT_SECRET}} \
             --from-literal=AZURE_TENANT_ID=${{secrets.AZURE_TENANT_ID}} \
