--- a/workflows/services.yml
+++ b/workflows/services.yml
@@ -38,6 +38,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 
 spec:
+  ingressClassName: nginx
   rules:
     - http:
         paths:
