--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -44,7 +44,7 @@ jobs:
               --resource-group $RESOURCE_GROUP \
               --name $AKS_NAME \
               --node-count 1 \
-              --vm-node-zie A2_v2 \
+              --vm-node-size A2_v2 \
               --enable-addons monitoring \
               --generate-ssh-keys
           fi
