--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -97,7 +97,9 @@ jobs:
           
       - name: Install NGINX
         run: |
-          helm upgrade --reuse-values --install nginx-ingress ingress-nginx/ingress-nginx --namespace ingress-basic --create-namespace      
+          helm repo add nginx-stable https://helm.nginx.com/stable
+          helm repo update
+          helm upgrade --install --reuse-values --install nginx-ingress ingress-nginx/ingress-nginx --namespace ingress-basic --create-namespace      
       
       - name: Apply K8 manifests
         run: |
