--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -51,11 +51,13 @@ jobs:
             echo "AKS resource does not exist.  Creating now..."
             az aks create \
               --resource-group $RESOURCE_GROUP \
+              --location candadaeast
               --name $AKS_NAME \
               --node-count 1 \
               --node-vm-size standard_a2_v2 \
               --attach-acr $ACR_NAME \
               --enable-addons monitoring \
+              --enable-app-routing \
               --generate-ssh-keys
           fi
 
