--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -76,52 +76,52 @@ jobs:
         run: |
           kubelogin convert-kubeconfig -l azurecli
           
-      - name: Prepare helm repos
-        run: |
-          helm repo add jetstack https://charts.jetstack.io --force-update
-          helm repo add aso2 https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
-          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-          helm repo update
+#      - name: Prepare helm repos
+#        run: |
+#          helm repo add jetstack https://charts.jetstack.io --force-update
+#          helm repo add aso2 https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
+#          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+#          helm repo update
           
-      - name: Install Cert Manager using Helm
-        run: |
-          helm upgrade --install cert-manager jetstack/cert-manager \
-            --namespace cert-manager \
-            --create-namespace \
-            --set crds.enabled=true              
+#      - name: Install Cert Manager using Helm
+#        run: |
+#          helm upgrade --install cert-manager jetstack/cert-manager \
+#            --namespace cert-manager \
+#            --create-namespace \
+#            --set crds.enabled=true              
           
-      - name: Install ASO using Helm
-        run: |
-          helm upgrade --install azure-service-operator aso2/azure-service-operator \
-            --create-namespace \
-            --namespace aso-system \
-            --set crds.enabled=true \
-            --set crdPattern='resources.azure.com/*;containerservice.azure.com/*;keyvault.azure.com/*;managedidentity.azure.com/*;eventhub.azure.com/*;documentdb.azure.com/*'                           
+#      - name: Install ASO using Helm
+#        run: |
+#          helm upgrade --install azure-service-operator aso2/azure-service-operator \
+#            --create-namespace \
+#            --namespace aso-system \
+#            --set crds.enabled=true \
+#            --set crdPattern='resources.azure.com/*;containerservice.azure.com/*;keyvault.azure.com/*;managedidentity.azure.com/*;eventhub.azure.com/*;documentdb.azure.com/*'                           
         
-      - name: Store values in secret file if not already existing
-        run: |
-          SECRET_NAME="aso-credential"
-          NAMESPACE="aso-system"
-          if ! kubectl get secret "$SECRET_NAME" -n "$NAMESPACE" > /dev/null 2>&1; then          
-            kubectl create secret generic "$SECRET_NAME" \
-              --namespace "$NAMESPACE" \
-              --from-literal=AZURE_CLIENT_ID=${{secrets.AZURE_CLIENT_ID}} \
-              --from-literal=AZURE_CLIENT_SECRET=${{secrets.AZURE_CLIENT_SECRET}} \
-              --from-literal=AZURE_TENANT_ID=${{secrets.AZURE_TENANT_ID}} \
-              --from-literal=AZURE_SUBSCRIPTION_ID=${{secrets.AZURE_SUBSCRIPTION_ID}}
-          fi
+#      - name: Store values in secret file if not already existing
+#        run: |
+#          SECRET_NAME="aso-credential"
+#          NAMESPACE="aso-system"
+#          if ! kubectl get secret "$SECRET_NAME" -n "$NAMESPACE" > /dev/null 2>&1; then          
+#            kubectl create secret generic "$SECRET_NAME" \
+#              --namespace "$NAMESPACE" \
+#              --from-literal=AZURE_CLIENT_ID=${{secrets.AZURE_CLIENT_ID}} \
+#              --from-literal=AZURE_CLIENT_SECRET=${{secrets.AZURE_CLIENT_SECRET}} \
+#              --from-literal=AZURE_TENANT_ID=${{secrets.AZURE_TENANT_ID}} \
+#              --from-literal=AZURE_SUBSCRIPTION_ID=${{secrets.AZURE_SUBSCRIPTION_ID}}
+#          fi
           
-      - name: Install NGINX
-        run: |
-          helm upgrade --install --reuse-values --install api-ingress ingress-nginx/ingress-nginx --namespace ingress-basic --create-namespace      
+#      - name: Install NGINX
+#        run: |
+#          helm upgrade --install --reuse-values --install api-ingress ingress-nginx/ingress-nginx --namespace ingress-basic --create-namespace      
       
-      - name: Apply K8 manifests
-        run: |
-          kubectl apply -f workflows/aso.yml
+#      - name: Apply K8 manifests
+#        run: |
+#          kubectl apply -f workflows/aso.yml
 
-      - name: Verify ASO Resources
-        run: |
-          kubectl -n aso-system get all
+#      - name: Verify ASO Resources
+#        run: |
+#          kubectl -n aso-system get all
           
       - name: Login to Container Registry
         run: |
