--- a/workflows/services.yml
+++ b/workflows/services.yml
@@ -33,19 +33,21 @@ kind: Ingress
 metadata:
   name: api-ingress
   namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: webapprouting.kubernetes.azure.com
   rules:
     - http:
         paths:
-          - path: /v1/
+          - path: "/v1(/|$)(.*)"
             pathType: Prefix
             backend:
               service:
                 name: test-service
                 port:
                   number: 7002
-          - path: /v2/
+          - path: "/v2(/|$)(.*)"
             pathType: Prefix
             backend:
               service:
