--- a/workflows/secretProvider.yml
+++ b/workflows/secretProvider.yml
@@ -6,8 +6,7 @@ spec:
   provider: azure
   parameters:
     usePodIdentity: "false"
-    useVMManagedIdentity: "true"
-    userAssignedIdentityId: "12997213-780c-4898-bd90-724ae1088bad"
+    clientID: "12997213-780c-4898-bd90-724ae1088bad"
     keyvaultName: asdc-vault
     
     object: |
@@ -15,4 +14,4 @@ spec:
         - |
           objectName: test
           objectType: secret
-    tenantId: f095723a-5c76-4be6-a448-c51b49214e22
+    tenantId: "f095723a-5c76-4be6-a448-c51b49214e22"
