--- a/workflows/deployments.yml
+++ b/workflows/deployments.yml
@@ -18,16 +18,16 @@ spec:
           ports:
             - containerPort: 8080
           volumeMounts:
-            - name: secrets-store
+            - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
               readOnly: true 
       volumes:
-        - name: secrets-store
+        - name: secrets-store-inline
           csi:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
-              secretProviderClass: asdc-secret-vault
+              secretProviderClass: "asdc-secret-vault"
 
 ---
 
